--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script src="js/manufacturer.js"></script>
   <script src="js/permission.js"></script>
   <script src="js/role.js"></script>
+  <script src="menu.js"></script>
+  <script src="header.js"></script>
   <script src="admin-control-panel.js"></script>
   <!-- <script src="startup.js"></script> -->
 </body>
