add change password module

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="bower_components/ng-admin/build/ng-admin.min.css">
@@ -7,8 +8,41 @@
   <script src="bower_components/fakerest/dist/FakeRest.min.js"></script>
   <script src="bower_components/ng-admin/build/ng-admin.min.js"></script>
   <script src="bower_components/satellizer/satellizer.js"></script>
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!--  <script>
+    var menu = {{menu}};
+  </script> -->
 </head>
+
 <body ng-app="adminControlPanel">
+  <!-- <div class="modal fade" id="modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="modal-title">
+            Change Password
+          </div>
+        </div>
+        <div class="modal-body">
+          <form class="form">
+            <div class="form-group">
+              <label class="">Password</label>
+              <input type="text" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label>Confirm Password</label>
+              <input type="email" class="form-control" placeholder="Confirm Password">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
   <div ui-view></div>
   <script src="js/administrator.js"></script>
   <script src="js/manufacturer.js"></script>
@@ -17,6 +51,6 @@
   <script src="menu.js"></script>
   <script src="header.js"></script>
   <script src="admin-control-panel.js"></script>
-  <!-- <script src="startup.js"></script> -->
 </body>
+
 </html>
